# zello

./: .gitignore  API_BOUNDARY_DECISIONS.md  BETTER_CROSS_FRAME_MEMORY_STUFF_PLAN.md  CLAUDE.md  CLEANUP_AND_LIBRARYIFY.md  COLOR_API.md  DEMO_FEATURE_REQUIREMENTS.md  EVENT_FLOW_ANALYSIS.md  FRAME_ARENA_WINS.md  IMAGE_USAGE.md  MODULAR_PLAN.md  QUICK_START.md  README.md  SIMULATOR.md  SINGLE_PASS_PROPOSAL.md  SLAPS_ROOF_OF_UI_PLAN.md  STYLE_PLAN.md  TEXT_CACHING_PLAN.md  TEXT_COPYING_STATUS.md  TEXT_STRESS_GARBAGE.md  THE_PLAN.md  ZIG_AND_RUST_ON_VELLO_PLAN.md  build-ios-sim-clang.sh  build-ios-sim.sh  build-ios.sh  build-simulator-working.sh  build.zig  compile-ios-objc.sh  compile-ios-sim-objc.sh  flake.nix  iOS-PORT.md  patch-for-simulator.sh  run-in-simulator.sh  run-ios-sim.sh  run-sim-manual.sh  run_example.sh
bindings/: mcore.h
ios/: Info.plist
plans/: FUTURE_LAYOUT_ENHANCEMENTS.md  IMAGE_PLAN.md  MODULAR_PLAN.md  PHASE1_COMPLETE.md  REFACTOR_SUMMARY.md  SCROLL_PLAN.md  STATUS.md  TEXT_CACHING_IMPLEMENTATION_STATUS.md  WORKING_EXAMPLES.md
rust/engine/: Cargo.toml  build.rs  rustc-ice-2025-10-05T10_12_05-27039.txt
rust/engine/src/: a11y.rs  blit.wgsl  gfx.rs  image.rs  lib.rs  text.rs  text_input.rs
src/: c_api.zig  main.zig  test_colors.zig  zello.zig
src/examples/: README.md  counter.zig  counter_advanced.zig  demo_simple.zig  hello_world.zig  scroll_test.zig  showcase.zig  text_stress_test.zig
src/objc/: metal_view.m
src/platform/: app.zig
src/ui/: a11y.zig  animation.zig  color.zig  commands.zig  flex.zig  focus.zig  id.zig  layout.zig  ui.zig  (+2 more)
(+13 files in other folders)
